# orc

./: .gitignore  .travis.yml  CMakeLists.txt  NOTICE  README.md  appveyor.yml
c++/include/orc/: Reader.hh  orc-config.hh.in
c++/src/orc/: Reader.cc
c++/src/wrap/: coded-stream-wrapper.h
doc/spec/: orc-spec.tex
examples/: TestOrcFile.testTimestamp.orc  union-timestamp.orc
java/orc/: README.md  build.gradle  pom.xml
java/orc/gradle/wrapper/: gradle-wrapper.properties
java/orc/src/main/java/org/apache/orc/: BitFieldReader.java  BitFieldWriter.java  ColumnStatisticsImpl.java  ConversionTreeReaderFactory.java  DirectDecompressionCodec.java  DynamicIntArray.java  FileDump.java  FileMetaInfo.java  FileMetadata.java  InStream.java  IntegerReader.java  IntegerWriter.java  JsonFileDump.java  MemoryManager.java  MetadataReader.java  MetadataReaderImpl.java  OrcFile.java  OrcStruct.java  OrcUnion.java  OrcUtils.java  OutStream.java  PositionRecorder.java  PositionedOutputStream.java  Reader.java  ReaderImpl.java  RecordReader.java  RecordReaderFactory.java  RecordReaderImpl.java  RecordReaderUtils.java  RunLengthByteReader.java  RunLengthByteWriter.java  RunLengthIntegerReader.java  RunLengthIntegerReaderV2.java  RunLengthIntegerWriter.java  RunLengthIntegerWriterV2.java  SerializationUtils.java  SnappyCodec.java  StreamName.java  StringRedBlackTree.java  StripeStatistics.java  (+4 more)
java/orc/src/main/java/org/apache/orc/protobuffgen/: OrcProto.java
java/orc/src/main/java/org/apache/orc/serde/: DateWritable.java  HiveBaseCharWritable.java  HiveCharWritable.java  HiveVarcharWritable.java  LazyBinaryUtils.java  TimestampWritable.java
java/orc/src/main/java/org/apache/orc/util/: BloomFilterIO.java  JavaDataModel.java  StringExpr.java  TimestampUtils.java
java/orc/src/test/java/org/apache/orc/: TestBitFieldReader.java  TestBitPack.java  TestColumnStatistics.java  TestDynamicArray.java  TestInStream.java  TestIntegerCompressionReader.java  TestJsonFileDump.java  TestMemoryManager.java  TestNewIntegerEncoding.java
java/orc/src/test/resources/: log4j.properties
libs/: CMakeLists.txt
orc-c++/: CMakeLists.txt
orc-c++/include/: CMakeLists.txt
orc-c++/include/orc/: C09Adapter.hh  ColumnPrinter.hh  Int128.hh  MemoryPool.hh  OrcFile.hh  Reader.hh  Vector.hh  orc-config.hh.in
orc-c++/libs/: CMakeLists.txt
orc-c++/libs/protobuf-2.6.0/: CMakeLists.txt  config.h.cmake
orc-c++/libs/snappy-1.1.2/: CMakeLists.txt  snappy-stubs-public.h.cmake  snappy.cc
orc-c++/os/win/: unistd.h
orc-c++/src/: CMakeLists.txt
orc-c++/src/orc/: C09Adapter.cc  ColumnPrinter.cc  ColumnReader.cc  Compression.cc  Compression.hh  Exceptions.cc  Int128.cc  MemoryPool.cc  OrcFile.cc  RLE.cc  RLEv1.cc  RLEv1.hh  RLEv2.cc  RLEv2.hh  Reader.cc  TypeImpl.cc  TypeImpl.hh  Vector.cc
orc-c++/src/wrap/: orc-proto-wrapper.cc  orc-proto-wrapper.hh  snappy-wrapper.h  zero-copy-stream-wrapper.h
orc-c++/test/: CMakeLists.txt
orc-c++/test/orc/: TestByteRle.cc  TestColumnReader.cc  TestCompression.cc  TestInt128.cc  TestRle.cc
src/: #FileInfo.cc#  ByteRLE.cc  ByteRLE.hh  C09Adapter.cc  CMakeLists.txt  ColumnPrinter.cc  ColumnPrinter.hh  ColumnReader.cc  ColumnReader.hh  Compression.cc  Compression.hh  Exceptions.cc  Exceptions.hh  FileContents.cc  FileInfo.cc  FileMemory.cc  FileMetadata.cc  FileScan.cc  FileStatistics.cc  Int128.cc  LocalFileDump.cc  LocalFileReader.cc  MemoryPool.cc  OrcFile.cc  RLE.cc  RLE.hh  RLEs.cc  RLEs.hh  RLEv1.cc  RLEv1.hh  RLEv2.cc  RLEv2.hh  Reader.cc  TypeImpl.cc  TypeImpl.hh  Vector.cc  hdfs.h  orc_proto.proto
src/orc/: #Reader.hh#  #Vector.hh#  C09Adapter.hh  ColumnPrinter.hh  Int128.hh  MemoryPool.hh  OrcFile.hh  Reader.hh  Vector.hh  cscope.out  orc-config.hh.in
src/wrap/: gmock.h  gtest-wrapper.h  orc-proto-wrapper.cc  orc-proto-wrapper.hh
test/: CMakeLists.txt  TestAdapterC11.cc  TestAdapterC11.hh  TestByteRle.cc  TestColumnPrinter.cc  TestColumnReader.cc  TestCompression.cc  TestDriver.cc  TestInt128.cc  TestReader.cc  TestRle.cc  gzip.cc  gzip.hh
tools-c++/: CMakeLists.txt
tools-c++/src/: CMakeLists.txt  FileContents.cc  FileMemory.cc  FileMetadata.cc  FileScan.cc  FileStatistics.cc
tools-c++/test/: CMakeLists.txt  TestReader.cc
